--- a/index.html
+++ b/index.html
@@ -374,45 +374,17 @@
         </div>
 
         <div class="container">
-          <div
-            class="isotope-layout"
-            data-default-filter="*"
-            data-layout="masonry"
-            data-sort="original-order"
-          >
-            <ul
-              class="portfolio-filters isotope-filters"
-              data-aos="fade-up"
-              data-aos-delay="100"
-            >
-              <li data-filter="*" class="filter-active">Todos</li>
-              <li data-filter=".filter-saas">SaaS / Web</li>
-              <li data-filter=".filter-bot">Automação / Bots</li>
-            </ul>
-
-            <div
-              class="row gy-4 isotope-container"
-              data-aos="fade-up"
-              data-aos-delay="200"
-            >
-              <div
-                class="col-lg-4 col-md-6 portfolio-item isotope-item filter-saas"
-              >
+          <div class="row gy-4">
+            <div class="col-lg-4 col-md-6">
+              <div class="portfolio-item">
                 <img
                   src="assets/img/portfolio/barbagenda.png"
+                  class="img-fluid"
                   alt="BarbAgenda"
                 />
                 <div class="portfolio-info">
                   <h4>BarbAgenda</h4>
                   <p>SaaS de Gestão para Barbearias</p>
-                  <a
-                    href="assets/img/portfolio/barbagenda.png"
-                    title="BarbAgenda - Sistema de Agendamento com React e Node.js"
-                    data-gallery="portfolio-gallery-saas"
-                    class="glightbox preview-link"
-                  >
-                    <i class="bi bi-zoom-in"></i>
-                  </a>
                   <a
                     href="https://github.com/JoaoZanelato/barber-saas"
                     title="Ver Código no GitHub"
@@ -423,26 +395,18 @@
                   </a>
                 </div>
               </div>
+            </div>
 
-              <div
-                class="col-lg-4 col-md-6 portfolio-item isotope-item filter-saas"
-              >
+            <div class="col-lg-4 col-md-6">
+              <div class="portfolio-item">
                 <img
                   src="assets/img/portfolio/esquizocord.jpg"
                   class="img-fluid"
-                  alt="EsquizoCord Interface"
+                  alt="EsquizoCord"
                 />
                 <div class="portfolio-info">
                   <h4>EsquizoCord</h4>
-                  <p>Clone do Discord com IA (EsquizoAI)</p>
-                  <a
-                    href="assets/img/portfolio/esquizocord.jpg"
-                    title="Aplicação de Chat em Tempo Real (Clone Discord) com Bot de Inteligência Artificial integrado."
-                    data-gallery="portfolio-gallery-saas"
-                    class="glightbox preview-link"
-                  >
-                    <i class="bi bi-zoom-in"></i>
-                  </a>
+                  <p>Clone do Discord com IA</p>
                   <a
                     href="https://github.com/JoaoZanelato/esquizocord"
                     title="Ver Código"
@@ -453,26 +417,18 @@
                   </a>
                 </div>
               </div>
+            </div>
 
-              <div
-                class="col-lg-4 col-md-6 portfolio-item isotope-item filter-saas"
-              >
+            <div class="col-lg-4 col-md-6">
+              <div class="portfolio-item">
                 <img
                   src="assets/img/portfolio/sbz.png"
                   class="img-fluid"
-                  alt="Projetos Freelance"
+                  alt="Freelance"
                 />
                 <div class="portfolio-info">
                   <h4>SoftwareByZane</h4>
                   <p>Desenvolvimento Freelance</p>
-                  <a
-                    href="assets/img/portfolio/sbz.png"
-                    title="Projetos desenvolvidos sob demanda para clientes locais"
-                    data-gallery="portfolio-gallery-saas"
-                    class="glightbox preview-link"
-                  >
-                    <i class="bi bi-zoom-in"></i>
-                  </a>
                   <a
                     href="https://github.com/JoaoZanelato"
                     title="Ver GitHub"
@@ -569,19 +525,12 @@
       ><i class="bi bi-arrow-up-short"></i
     ></a>
 
-    <div id="preloader"></div>
-
     <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/vendor/php-email-form/validate.js"></script>
     <script src="assets/vendor/aos/aos.js"></script>
     <script src="assets/vendor/typed.js/typed.umd.js"></script>
     <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
-    <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
-    <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
     <script src="assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
-    <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-    <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-
+    
     <script src="assets/js/main.js"></script>
   </body>
 </html>
