fix + clen: desnecessary archives and css fix

--- a/index.html
+++ b/index.html
@@ -32,11 +32,6 @@
       rel="stylesheet"
     />
     <link href="assets/vendor/aos/aos.css" rel="stylesheet" />
-    <link
-      href="assets/vendor/glightbox/css/glightbox.min.css"
-      rel="stylesheet"
-    />
-    <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" />
 
     <link href="assets/css/main.css" rel="stylesheet" />
   </head>
@@ -52,9 +47,7 @@
 
         <nav id="navmenu" class="navmenu">
           <ul>
-            <li>
-              <a href="#hero" class="active">Início<br /></a>
-            </li>
+            <li><a href="#hero" class="active">Início</a></li>
             <li><a href="#about">Sobre</a></li>
             <li><a href="#resume">Currículo</a></li>
             <li><a href="#services">Habilidades</a></li>
@@ -84,6 +77,7 @@
           </p>
         </div>
       </section>
+
       <section id="about" class="about section">
         <div class="container" data-aos="fade-up" data-aos-delay="100">
           <div class="row gy-4">
@@ -93,22 +87,22 @@
                   <img
                     src="assets/img/profile-img.jpg"
                     class="img-fluid"
-                    alt=""
+                    alt="João Zanelato"
                   />
                 </div>
                 <div class="col-lg-7 about-info">
                   <p>
-                    <strong>Nome: </strong>
-                    <span>João Guilherme Butka Zanelato</span>
+                    <strong>Nome: </strong
+                    ><span>João Guilherme Butka Zanelato</span>
                   </p>
                   <p>
-                    <strong>Perfil: </strong>
-                    <span>Desenvolvedor & Suporte de TI</span>
+                    <strong>Perfil: </strong
+                    ><span>Desenvolvedor & Suporte de TI</span>
                   </p>
                   <p>
-                    <strong>Email: </strong> <span>jgbzanelato@gmail.com</span>
+                    <strong>Email: </strong><span>jgbzanelato@gmail.com</span>
                   </p>
-                  <p><strong>Celular: </strong> <span>(54) 99630-3319</span></p>
+                  <p><strong>Celular: </strong><span>(54) 99630-3319</span></p>
                 </div>
               </div>
 
@@ -163,14 +157,14 @@
 
                 <div class="progress">
                   <span class="skill"
-                    ><span>Suporte & Infraestrutura (Windows/Redes)</span>
-                    <i class="val">60%</i></span
+                    ><span>Suporte & Infraestrutura</span>
+                    <i class="val">90%</i></span
                   >
                   <div class="progress-bar-wrap">
                     <div
                       class="progress-bar"
                       role="progressbar"
-                      aria-valuenow="60"
+                      aria-valuenow="90"
                       aria-valuemin="0"
                       aria-valuemax="100"
                     ></div>
@@ -185,9 +179,8 @@
                 <p>
                   Estudante de Análise e Desenvolvimento de Sistemas (IFRS) com
                   facilidade de aprendizado. Possuo experiência prática em
-                  suporte técnico, atendimento ao usuário e manutenção de
-                  sistemas, além de competências em desenvolvimento de software
-                  (Web e Mobile).
+                  suporte técnico e manutenção de sistemas, além de competências
+                  em desenvolvimento de software.
                 </p>
                 <p>
                   Busco oportunidade na área de TI onde possa contribuir com
@@ -195,19 +188,19 @@
                   garantindo a estabilidade da infraestrutura.
                 </p>
 
-                <h5 class="mt-4">Competências Comportamentais (Soft Skills)</h5>
+                <h5 class="mt-4">Competências Comportamentais</h5>
                 <ul>
                   <li>
                     <i class="bi bi-check-circle-fill text-primary"></i>
-                    Comunicação clara para explicar problemas técnicos.
+                    Comunicação clara.
                   </li>
                   <li>
                     <i class="bi bi-check-circle-fill text-primary"></i>
-                    Capacidade analítica para diagnóstico (Troubleshooting).
+                    Capacidade analítica (Troubleshooting).
                   </li>
                   <li>
                     <i class="bi bi-check-circle-fill text-primary"></i>
-                    Trabalho em equipe e colaboração.
+                    Trabalho em equipe.
                   </li>
                   <li>
                     <i class="bi bi-check-circle-fill text-primary"></i>
@@ -219,6 +212,7 @@
           </div>
         </div>
       </section>
+
       <section id="resume" class="resume section">
         <div class="container section-title" data-aos="fade-up">
           <h2>Currículo</h2>
@@ -234,8 +228,7 @@
                 <h5>Previsão de Conclusão: 2027</h5>
                 <p><em>Instituto Federal do Rio Grande do Sul (IFRS)</em></p>
                 <p>
-                  Foco em engenharia de software, desenvolvimento full stack e
-                  banco de dados.
+                  Foco em engenharia de software e desenvolvimento full stack.
                 </p>
               </div>
 
@@ -249,8 +242,7 @@
                   </li>
                   <li><strong>Back-end:</strong> Node.js, Express.js.</li>
                   <li>
-                    <strong>Ferramentas:</strong> Git, GitHub, VS Code, ESP32
-                    (IoT Básico).
+                    <strong>Ferramentas:</strong> Git, GitHub, VS Code, ESP32.
                   </li>
                 </ul>
               </div>
@@ -258,54 +250,37 @@
 
             <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
               <h3 class="resume-title">Experiência Profissional</h3>
-
               <div class="resume-item">
                 <h4>Estagiário de TI</h4>
                 <h5>Fev 2026 - Atualmente</h5>
                 <p><em>EMATER/ASCAR-RS</em></p>
                 <ul>
                   <li>
-                    Atuação direta no suporte técnico, garantindo a resolução
-                    rápida de problemas de TI.
+                    Atuação direta no suporte técnico e resolução de problemas.
                   </li>
-                  <li>
-                    Manutenção preventiva e corretiva de equipamentos e sistemas
-                    internos.
-                  </li>
-                  <li>
-                    Apoio na gestão de infraestrutura de rede e configurações de
-                    ambiente.
-                  </li>
+                  <li>Manutenção de equipamentos e sistemas internos.</li>
+                  <li>Apoio na gestão de infraestrutura de rede.</li>
                 </ul>
               </div>
 
               <div class="resume-item">
-                <h4>Desenvolvedor e Suporte Autônomo</h4>
+                <h4>Desenvolvedor Freelancer</h4>
                 <h5>Nov 2025 - Atualmente</h5>
                 <p><em>SoftwareByZane</em></p>
                 <ul>
-                  <li>
-                    Atuação como freelancer resolvendo demandas tecnológicas
-                    para pequenos negócios.
-                  </li>
-                  <li>
-                    Desenvolvimento de soluções web personalizadas e consultoria
-                    técnica.
-                  </li>
-                  <li>
-                    Gerenciamento autônomo de projetos e relacionamento com
-                    clientes.
-                  </li>
+                  <li>Desenvolvimento de soluções web personalizadas.</li>
+                  <li>Consultoria técnica para pequenos negócios.</li>
                 </ul>
               </div>
             </div>
           </div>
         </div>
       </section>
+
       <section id="services" class="services section">
         <div class="container section-title" data-aos="fade-up">
           <h2>Áreas de Atuação</h2>
-          <p>Como posso agregar valor ao seu time ou projeto.</p>
+          <p>Como posso agregar valor ao seu time.</p>
         </div>
 
         <div class="container">
@@ -316,14 +291,11 @@
               data-aos-delay="100"
             >
               <div class="service-item position-relative">
-                <div class="icon">
-                  <i class="bi bi-laptop"></i>
-                </div>
+                <div class="icon"><i class="bi bi-laptop"></i></div>
                 <h3>Desenvolvimento Web & SaaS</h3>
                 <p>
                   Criação de sistemas funcionais utilizando React, Node.js e
-                  banco de dados SQL. Experiência com projetos autorais como o
-                  BarbAgenda.
+                  SQL.
                 </p>
               </div>
             </div>
@@ -334,14 +306,11 @@
               data-aos-delay="200"
             >
               <div class="service-item position-relative">
-                <div class="icon">
-                  <i class="bi bi-tools"></i>
-                </div>
+                <div class="icon"><i class="bi bi-tools"></i></div>
                 <h3>Suporte Técnico & Infra</h3>
                 <p>
-                  Diagnóstico de problemas (Troubleshooting), manutenção de
-                  hardware/software e suporte ao usuário final com comunicação
-                  clara.
+                  Diagnóstico de problemas (Troubleshooting) e manutenção de
+                  hardware.
                 </p>
               </div>
             </div>
@@ -352,101 +321,96 @@
               data-aos-delay="300"
             >
               <div class="service-item position-relative">
-                <div class="icon">
-                  <i class="bi bi-phone"></i>
-                </div>
+                <div class="icon"><i class="bi bi-phone"></i></div>
                 <h3>Mobile & Automação</h3>
                 <p>
-                  Desenvolvimento de aplicativos móveis com React Native e
-                  criação de bots de automação (Discord) com JavaScript.
+                  Desenvolvimento de aplicativos móveis e bots de automação.
                 </p>
               </div>
             </div>
           </div>
         </div>
       </section>
+
       <section id="portfolio" class="portfolio section">
         <div class="container section-title" data-aos="fade-up">
           <h2>Meus Projetos</h2>
-          <p>
-            Aplicações desenvolvidas com foco em resolução de problemas reais.
-          </p>
+          <p>Aplicações desenvolvidas com foco em resolução de problemas.</p>
         </div>
 
         <div class="container">
-          <div class="row gy-4">
-            <div class="col-lg-4 col-md-6">
-              <div class="portfolio-item">
-                <img
-                  src="assets/img/portfolio/barbagenda.png"
-                  class="img-fluid"
-                  alt="BarbAgenda"
-                />
-                <div class="portfolio-info">
-                  <h4>BarbAgenda</h4>
-                  <p>SaaS de Gestão para Barbearias</p>
-                  <a
-                    href="https://github.com/JoaoZanelato/barber-saas"
-                    title="Ver Código no GitHub"
-                    target="_blank"
-                    class="details-link"
-                  >
-                    <i class="bi bi-github"></i>
-                  </a>
-                </div>
+          <div
+            class="row gy-4 isotope-container"
+            data-aos="fade-up"
+            data-aos-delay="200"
+          >
+            <div class="col-lg-4 col-md-6 portfolio-item">
+              <img
+                src="assets/img/portfolio/barbagenda.png"
+                class="img-fluid"
+                alt="BarbAgenda"
+              />
+              <div class="portfolio-info">
+                <h4>BarbAgenda</h4>
+                <p>SaaS de Gestão para Barbearias</p>
+                <a
+                  href="https://github.com/JoaoZanelato/barber-saas"
+                  title="Ver Código no GitHub"
+                  target="_blank"
+                  class="details-link"
+                >
+                  <i class="bi bi-github"></i>
+                </a>
               </div>
             </div>
 
-            <div class="col-lg-4 col-md-6">
-              <div class="portfolio-item">
-                <img
-                  src="assets/img/portfolio/esquizocord.jpg"
-                  class="img-fluid"
-                  alt="EsquizoCord"
-                />
-                <div class="portfolio-info">
-                  <h4>EsquizoCord</h4>
-                  <p>Clone do Discord com IA</p>
-                  <a
-                    href="https://github.com/JoaoZanelato/esquizocord"
-                    title="Ver Código"
-                    target="_blank"
-                    class="details-link"
-                  >
-                    <i class="bi bi-github"></i>
-                  </a>
-                </div>
+            <div class="col-lg-4 col-md-6 portfolio-item">
+              <img
+                src="assets/img/portfolio/esquizocord.jpg"
+                class="img-fluid"
+                alt="EsquizoCord"
+              />
+              <div class="portfolio-info">
+                <h4>EsquizoCord</h4>
+                <p>Clone do Discord com IA</p>
+                <a
+                  href="https://github.com/JoaoZanelato/esquizocord"
+                  title="Ver Código"
+                  target="_blank"
+                  class="details-link"
+                >
+                  <i class="bi bi-github"></i>
+                </a>
               </div>
             </div>
 
-            <div class="col-lg-4 col-md-6">
-              <div class="portfolio-item">
-                <img
-                  src="assets/img/portfolio/sbz.png"
-                  class="img-fluid"
-                  alt="Freelance"
-                />
-                <div class="portfolio-info">
-                  <h4>SoftwareByZane</h4>
-                  <p>Desenvolvimento Freelance</p>
-                  <a
-                    href="https://github.com/JoaoZanelato"
-                    title="Ver GitHub"
-                    target="_blank"
-                    class="details-link"
-                  >
-                    <i class="bi bi-github"></i>
-                  </a>
-                </div>
+            <div class="col-lg-4 col-md-6 portfolio-item">
+              <img
+                src="assets/img/portfolio/sbz.png"
+                class="img-fluid"
+                alt="Freelance"
+              />
+              <div class="portfolio-info">
+                <h4>SoftwareByZane</h4>
+                <p>Desenvolvimento Freelance</p>
+                <a
+                  href="https://github.com/JoaoZanelato"
+                  title="Ver GitHub"
+                  target="_blank"
+                  class="details-link"
+                >
+                  <i class="bi bi-github"></i>
+                </a>
               </div>
             </div>
           </div>
         </div>
       </section>
+
       <section id="contact" class="contact section">
         <div class="container section-title" data-aos="fade-up">
           <h2>Contato</h2>
-          <p>Estou à disposição para entrevistas e oportunidades.</p>
+          <p>Estou à disposição para entrevistas.</p>
         </div>
 
         <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -512,9 +476,6 @@
             ><i class="bi bi-linkedin"></i
           ></a>
         </div>
-        <div class="credits">
-          Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-        </div>
       </div>
     </footer>
 
@@ -522,15 +483,15 @@
       href="#"
       id="scroll-top"
       class="scroll-top d-flex align-items-center justify-content-center"
-      ><i class="bi bi-arrow-up-short"></i
-    ></a>
+    >
+      <i class="bi bi-arrow-up-short"></i>
+    </a>
 
     <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="assets/vendor/aos/aos.js"></script>
     <script src="assets/vendor/typed.js/typed.umd.js"></script>
-    <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
     <script src="assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
-    
+
     <script src="assets/js/main.js"></script>
   </body>
 </html>
