--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
                     <div
                       class="progress-bar"
                       role="progressbar"
+                      style="width: 80%"
                       aria-valuenow="80"
                       aria-valuemin="0"
                       aria-valuemax="100"
@@ -133,6 +134,7 @@
                     <div
                       class="progress-bar"
                       role="progressbar"
+                      style="width: 75%"
                       aria-valuenow="75"
                       aria-valuemin="0"
                       aria-valuemax="100"
@@ -148,6 +150,7 @@
                     <div
                       class="progress-bar"
                       role="progressbar"
+                      style="width: 70%"
                       aria-valuenow="70"
                       aria-valuemin="0"
                       aria-valuemax="100"
@@ -164,6 +167,7 @@
                     <div
                       class="progress-bar"
                       role="progressbar"
+                      style="width: 90%"
                       aria-valuenow="90"
                       aria-valuemin="0"
                       aria-valuemax="100"
