fix: intern date

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
               <h3 class="resume-title">Experiência Profissional</h3>
               <div class="resume-item">
                 <h4>Estagiário de TI</h4>
-                <h5>Fev 2026 - Atualmente</h5>
+                <h5>Aug 2024 - Atualmente</h5>
                 <p><em>EMATER/ASCAR-RS</em></p>
                 <ul>
                   <li>
