--- a/index.html
+++ b/index.html
@@ -174,6 +174,22 @@
                     ></div>
                   </div>
                 </div>
+
+                <div class="progress">
+                  <span class="skill"
+                    ><span>Inglês (Nível B2)</span> <i class="val">70%</i></span
+                  >
+                  <div class="progress-bar-wrap">
+                    <div
+                      class="progress-bar"
+                      role="progressbar"
+                      style="width: 70%"
+                      aria-valuenow="70"
+                      aria-valuemin="0"
+                      aria-valuemax="100"
+                    ></div>
+                  </div>
+                </div>
               </div>
             </div>
 
@@ -187,7 +203,7 @@
                   em desenvolvimento de software.
                 </p>
                 <p>
-                  Busco oportunidade na área de TI onde possa contribuir com
+                  Busco oportunidade na área da TI onde possa contribuir com
                   resolução de problemas, seja codificando soluções ou
                   garantindo a estabilidade da infraestrutura.
                 </p>
